src/components/slides/CommonSl.module.css
@font-face {
    font-family: 'Gilroy';
    font-family: 'GilroyBold';
    src: local('Gilroy'), url(../../fonts/Gilroy-Light.otf) format('truetype');
    src: local('GilroyBold'), url(../../fonts/Gilroy-ExtraBold.otf) format('truetype');

  }

.slide_container{
   display: flex;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 15rem); 
   overflow-y: scroll;
}

.caption{
 width: 40vw;
 text-align: left;
}

h2{
    font-size: 3.5rem;
    font-family: "GilroyBold";
}
h2>img{
    height: 5rem;
}

p{
 font-size: 1.6rem;

}

.video_container{
    width: 32vw;
    height: auto;
}
.caption6{
    width: 50vw;
    padding-left: 5vw;
    text-align: left;
   }
.video_container6{
    width: 32vw;
    height: auto;
    visibility: hidden;
 
}

@media (max-width: 805px) {
    .slide_container{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: fit-content;
        margin-top: 2rem;
     }

     .caption{
        width: 90vw;
        text-align: left;
       }

       .video_container{
        width: 90vw;
        height: auto;
    }
    .caption6{
        width: 90vw;
        padding-left: 5vw;
        text-align: left;
       }
    .video_container6{
        width: 90vw;
        height: auto;
        visibility: hidden;
     
    }
    h2{
        font-size: 2.5rem;
        font-family: "GilroyBold";
    }
    h2>img{
        height: 3rem;
    }
    
    p{
     font-size: 1.4rem;
    
    }
}

